# terminal

./: README.md  cmds.json  cmds.yaml  dir.txt  pyproject.toml  requirements.txt  reset.bat  set_dir.bat  terminal.py
data/test/: LICENSE  cmds.json
src/apyterm_ilovapples/: README.md  README.md.1  cmds.yaml  create_files.bat  create_files.sh  pyterminal.py  reset.bat  reset.sh  set_dir.sh
src/apyterm_ilovapples.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
