[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apyterm"
authors = [
    {name = "Asher Grossman", email = "ashergrossman185@gmail.com"},
]
description = "A simple terminal emulator built with Python."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pytermgui",
]
dynamic = ["version"]
