[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apyterm_ilovapples"
version = "1.0.0"
authors = [
  { name="ilovapples", email="ilovapples515@gmail.com" },
]
description = "A terminal-ish package (with extendable commands)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ilovapples/terminal"
"Bug Tracker" = "https://github.com/ilovapples/terminal/issues"
